fixed gap at top of screen so header doesn't move at all now

--- a/application/src/main/resources/static/js/react-client/src/Components/Header/style.module.scss
+++ b/application/src/main/resources/static/js/react-client/src/Components/Header/style.module.scss
@@ -3,6 +3,7 @@
 .stick {
   position: sticky;
   top: 0;
+  margin-top: -10px;
 }
 
 .header {
